--- a/leaderboard.css
+++ b/leaderboard.css
@@ -40,7 +40,7 @@ h2 {
     border-radius: 3px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
-    background: #95b9de;
+    background: #E07A76;
 }
 #table .data-table th, #table .data-table td {
     box-shadow: inset 0 -1px rgba(0,0,0,0.25), 
@@ -49,9 +49,10 @@ h2 {
 #table .data-table th {
 
     font-weight: normal;
+
     -webkit-font-smoothing: antialiased;
     padding: 1em;
-    color: rgba(0,0,0,0.45);
+    color: white /*rgba(0,0,0,0.45);*/
     text-shadow: 0 0 1px rgba(0,0,0,0.1);
     font-size: 1.5em;
     background: #E2382E;
