--- a/rules.css
+++ b/rules.css
@@ -37,7 +37,7 @@ body {
     font-size: 24px; 
     line-height: 40px; 
     font-weight: normal; 
-    color: #000; 
+    color: white; 
     text-shadow: 0 1px 3px #222; 
     font-size:45px;
     display: block;
@@ -59,7 +59,7 @@ body {
     font-style:italic; 
     font-family:Georgia, Times, serif; 
     font-size:32px; 
-    color: #00a1d2;  
+    color: #E04C49;  
     opacity: 1;
 }
 #rules-content #rules-list>li {
@@ -75,7 +75,7 @@ body {
     text-shadow: 0 0 1px #777;
 }
 #rules-content #rules-list li:hover p { 
-    text-shadow: 0 0 3px #00a1d2;
+    text-shadow: 0 0 3px #E04C49;
 }
 #rules-content #rules-list li p span {
     font-style: italic;
