--- a/profile.css
+++ b/profile.css
@@ -26,7 +26,7 @@
 }
 
 body { 
-    background: url("./images/cover.jpg") repeat scroll center center rgb(100, 91, 92);
+    background: url("./images/pro_cover.jpg") repeat scroll center center rgb(100, 91, 92);
     min-width: 1200px;
     overflow: auto;
 }
@@ -58,11 +58,11 @@ body {
     font-family: 'Self Destruct';
     font-size: 40px;
     font-weight: 100;
-    text-shadow: 0 0 15px #fff, 0 0 20px #2d84ff, 0 0 30px #2d84ff, 0 0 40px #2d84ff, 0 0 50px #2d84ff, 0 0 75px #2d84ff;
+    
 }
 
 #user-info h2 span {
-    text-shadow: 0 0 15px #fff, 0 0 20px #2d84ff, 0 0 30px #2d84ff, 0 0 40px #2d84ff, 0 0 50px #2d84ff, 0 0 75px #2d84ff;
+    
     position: absolute;
     right: -80%;
     top:0;
@@ -153,7 +153,7 @@ body {
     position: fixed;
     top: 55px;
     left: 2%;
-    height: 85%;
+    height: 90%;
     width: 60%;
     min-width: 450px;
     max-width: 775px;
@@ -162,13 +162,9 @@ body {
     box-shadow: -5px 5px 10px 5px #111;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    background:
-        radial-gradient(black 15%, transparent 16%) 0 0,
-        radial-gradient(black 15%, transparent 16%) 8px 8px,
-        radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-        radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-    background-color:#282828;
+    background-color:#ffffff;
     background-size:16px 16px;
+    opacity: 0.9;
 }
 #button-wrapper #question-div {
     position: absolute;
@@ -177,6 +173,7 @@ body {
     height: 100%;
     overflow: auto;
     width:100%;
+    opacity: 2;
 }
 #button-wrapper #question-div.minimized {
     height: 80%;
@@ -205,7 +202,7 @@ body {
 #button-wrapper h3 {
     margin: 1.3em 0.5em 0.75em;
     padding: 0 0 3% 4%;
-    color: #004ab2;
+    color: #DF4240;
     font-family: 'Hadley', sans-serif;
     position: relative;
     text-shadow: 0 2px 0 rgba(255,255,255,0.5),
