--- a/navbar.css
+++ b/navbar.css
@@ -16,14 +16,15 @@
  */
 
 nav {
-    background: linear-gradient(black,#7F3B32,#B05245);
-    opacity: 0.9;
+    background :linear-gradient(black,#7F3B32,#B05245);
+    /*linear-gradient(black,#7F3B32,#B05245);*/
+    opacity: 0.8;
     position:fixed;
     top:0em;
     left:0em;
     width:100%;
     height:55px;
-    box-shadow: 0 5px 5px #111;
+    box-shadow: 0 2px 2px #111;
     z-index: 1;
     min-width: inherit;
 }
