--- a/index.css
+++ b/index.css
@@ -127,9 +127,10 @@ h2 {
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.06);
 }
 .login input[type=text]:focus, .login input[type=password]:focus {
-    color: #D94337;
+    color: #FF513D;
     background: rgba(0, 0, 0, 0.1);
     outline: 0;
+    text-shadow: 0px 0px 0px black;
     box-shadow: 0 0 5px black;
 }
 
@@ -371,20 +372,22 @@ h2 {
     width: 500px;
     margin: 100px auto;
     padding: 50px;
-    background:
+   /* background:
         radial-gradient(black 15%, transparent 16%) 0 0,
         radial-gradient(black 15%, transparent 16%) 8px 8px,
         radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-        radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-    background-color:#282828;
+        radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;*/
+    background-color:white;
     background-size:16px 16px;
-    border-radius: 15px;
-    border: 2px solid #fff;
-    box-shadow: 0 0 15px 2px #ddd;
+    border-radius: 10px;
+    border: 0.5px solid #fff;
+    box-shadow: 0 0 10px 2px #ddd;
+    opacity: 0.7;
 }
 
 #complete-hide #message-display h2 {
     text-align: center;
+    color: black;
 }
 
 @keyframes vanish {
