--- a/profile.css
+++ b/profile.css
@@ -162,9 +162,9 @@ body {
     box-shadow: -5px 5px 10px 5px #111;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    background-color:#ffffff;
+    background-color:#F2F0ED;
     background-size:16px 16px;
-    opacity: 0.9;
+    opacity: 0.95;
 }
 #button-wrapper #question-div {
     position: absolute;
@@ -173,7 +173,7 @@ body {
     height: 100%;
     overflow: auto;
     width:100%;
-    opacity: 2;
+    /*opacity: 2;*/
 }
 #button-wrapper #question-div.minimized {
     height: 80%;
@@ -254,8 +254,8 @@ body {
     font-size:36px;
     top:50px;
     left:18px;
-    color:#bde086;
-    text-shadow:0px 1px 1px rgba(0,0,0,0.3);
+    color:#0A85B0;
+    /*text-shadow:0px 1px 1px rgba(0,0,0,0.3);*/
     -webkit-transform:scale(0);
     -moz-transform:scale(0);
     -ms-transform:scale(0);
@@ -369,7 +369,8 @@ body {
     100% { left: 350px;}
 }
 #button-wrapper .a-btn.unopened {
-    background-color:#80a9da;
+    background-color:white;
+
 }
 #button-wrapper .a-btn.unopened .a-btn-text {
     color: #002e70;
@@ -377,21 +378,21 @@ body {
 }
 
 #button-wrapper .a-btn.opened {
-    background-color:#eabe05;
+    background-color:#F27866;
 }
 #button-wrapper .a-btn.opened .a-btn-text {
-    color: #5a4a06;
-    text-shadow:0px -1px 1px #5a4a06;
+    color: white;
+    text-shadow:0px -1px 1px black;
 }
 
 #button-wrapper .a-btn.answered {
-    background-color:#66cc00;
+    background-color:#07700D;
 }
 #button-wrapper .a-btn.answered .a-btn-text {
-    color: #006633;
-    text-shadow:0px -1px 1px #002814;
+    color: #47E56F;
+    text-shadow:0px -1px 1px #006603;
 }
-#button-wrapper #advance{
+#button-wrapper #advance{ 
     text-decoration: none;
     -webkit-border-radius:10px;
     -moz-border-radius:10px;
@@ -501,16 +502,17 @@ body {
     width: 500px;
     margin: 100px auto;
     padding: 50px;
-    background:
+    /*background:
         radial-gradient(black 15%, transparent 16%) 0 0,
         radial-gradient(black 15%, transparent 16%) 8px 8px,
         radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-        radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-    background-color:#282828;
+        radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;*/
+    background-color:white;
     background-size:16px 16px;
-    border-radius: 15px;
-    border: 2px solid #fff;
+    border-radius: 10px;
+    border: 0.5px solid #fff;
     box-shadow: 0 0 15px 2px #ddd;
+    opacity: 0.7;
 }
 
 #complete-hide #message-display h2 {
