--- a/navbar.css
+++ b/navbar.css
@@ -16,7 +16,7 @@
  */
 
 nav {
-    background :linear-gradient(black,#7F3B32,#B05245);
+    background :linear-gradient(black,#A15430,#CC6B3D);
     /*linear-gradient(black,#7F3B32,#B05245);*/
     opacity: 0.8;
     position:fixed;
