--- a/index.css
+++ b/index.css
@@ -59,16 +59,16 @@ h2 {
     font: 14px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     height:25em;
     width:31em;
-    background-color: #bfbebe;
-    opacity: 0.9;
+    background-color: black ;
+    opacity: 0.6;
 
 }
 
 .login h2 {
     text-align: center;
     font-weight: bold;
-    font-size: 32px;
-    color: #222222;
+    font-size: 40px;
+    color: white;
     text-shadow: 0 0 2px #7F3B32;
     margin-top: 20px;
     letter-spacing: 1px;
@@ -124,18 +124,18 @@ h2 {
     border: 0;
     border-radius: 5px;
     -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.06);
-    box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.06);
+    box-shadow: inset 0 1px 4px #e4e4e4;
 }
 .login input[type=text]:focus, .login input[type=password]:focus {
-    color: #FF513D;
+    color: #FFB4AC;
     background: rgba(0, 0, 0, 0.1);
     outline: 0;
     text-shadow: 0px 0px 0px black;
-    box-shadow: 0 0 5px black;
+    box-shadow: 0 0 5px #e4e4e4;
 }
 
 .login input[type=text]:hover, .login input[type=password]:hover {
-    box-shadow: 0 0 5px black;
+    box-shadow: 0 0 2px #e4e4e4;
 }
 
 .login label {
@@ -154,7 +154,7 @@ h2 {
     font-size: 13px;
     font-weight: 100;
     letter-spacing: 1px;
-    color: red;
+    color: white;
 }
 
 .login .login-submit {
@@ -211,7 +211,7 @@ h2 {
     bottom: 5px;
     left: 5px;
     right: 5px;
-    background: #00a2d3;
+    background: #F25945;
     border-radius: 24px;
     background-image: -webkit-linear-gradient(top, #00a2d3, #0d7796);
     background-image: -moz-linear-gradient(top, #00a2d3, #0d7796);
