--- a/leaderboard.css
+++ b/leaderboard.css
@@ -21,7 +21,7 @@
     outline: none; 
 }
 body {
-    background: url("./images/cover.jpg") repeat scroll center center rgb(100, 91, 92);
+    background: url("./images/pro_cover.jpg") repeat scroll center center rgb(100, 91, 92);
 }
 h2 { 
     padding: 20px 0 10px 0; 
@@ -40,7 +40,7 @@ h2 {
     border-radius: 3px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
-    background: #E07A76;
+    background: #E58452;
 }
 #table .data-table th, #table .data-table td {
     box-shadow: inset 0 -1px rgba(0,0,0,0.25), 
@@ -55,7 +55,7 @@ h2 {
     color: white /*rgba(0,0,0,0.45);*/
     text-shadow: 0 0 1px rgba(0,0,0,0.1);
     font-size: 1.5em;
-    background: #E2382E;
+    background: #B86942;
 }
 #table .data-table td {
     color: #f7f7f7;
