--- a/navbar.css
+++ b/navbar.css
@@ -16,7 +16,7 @@
  */
 
 nav {
-    background :linear-gradient(black,#A15430,#CC6B3D);
+    background: linear-gradient(black,#757575,#e0e0e0);
     /*linear-gradient(black,#7F3B32,#B05245);*/
     opacity: 0.8;
     position:fixed;
@@ -61,7 +61,7 @@ nav a:focus {
     left: 0;
     width: 100%;
     height: 1px;
-    background: linear-gradient(white,#B05245);
+    background: linear-gradient(white,#757575);
     content: '';
     opacity: 0.2;
     -webkit-transition: opacity 0.3s, height 0.3s;
@@ -72,7 +72,7 @@ nav a:focus {
 .cl-effect-9 a::after {
     top: 93%;
     opacity: 0;
-    box-shadow: 0 1px 3px red;
+    box-shadow: 0 1px 3px #757575;
     -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
     -moz-transition: -moz-transform 0.3s, opacity 0.3s;
     transition: transform 0.3s, opacity 0.3s;
@@ -92,7 +92,7 @@ nav a:focus {
     z-index: 1;
     display: block;
     padding: 2px 0 0 0;
-    color: rgb(170, 170, 170);
+    color: #FFF;
     text-shadow: none;
     text-transform: none;
     text-align: center;
@@ -134,4 +134,5 @@ nav a:focus {
     -moz-transform: translateY(0%);
     transform: translateY(0%);
 }
+
 
