--- a/profile.css
+++ b/profile.css
@@ -26,10 +26,14 @@
 }
 
 body { 
-    background: url("./images/pro_cover.jpg") repeat scroll center center rgb(100, 91, 92);
-    background-position: absolute;
-    min-width: 1200px;
+    background: url("./images/pro_cover.jpg");
+    background-color: rgb(100, 91, 92);
+    background-size: cover;
+    /*repeat scroll center center */
+    /*background-position: absolute;
+    min-width: 1200px;*/
     overflow: auto;
+    
 }
 
 #user-info {
