--- a/sliderman.css
+++ b/sliderman.css
@@ -21,8 +21,8 @@
 {   
     opacity: 0.9;   
     float: left;
-    margin: 0 auto;
-    padding: 15px;
+    margin: 15px 15px auto;
+    padding: 0px;
     width: 700px; 
     position:absolute; 
     top:60px; 
