--- a/register.css
+++ b/register.css
@@ -63,7 +63,7 @@ body {
 }
 #register input{
     width: 92%;
-    margin-top: 4px;
+    margin: 10px;
     padding: 10px 5px 10px 32px;	
     border: 1px solid rgb(178, 178, 178);
     -webkit-appearance: textfield;
@@ -117,7 +117,7 @@ body {
     font-family: 'FontomasCustomRegular';
     color: rgb(106, 159, 171);
     position: absolute;
-    left: 10px;
+    left: 20px;
     top: 35px;
     width: 30px;
 }
