--- a/leaderboard.css
+++ b/leaderboard.css
@@ -42,7 +42,8 @@ h2 {
     border-radius: 3px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
-    background: #E58452;
+    color: #FFF;
+    background: linear-gradient(#353535,#757575,#e0e0e0);
 }
 #table .data-table th, #table .data-table td {
     box-shadow: inset 0 -1px rgba(0,0,0,0.25), 
