--- a/question.css
+++ b/question.css
@@ -280,7 +280,7 @@ body {
     top:0;
     left: 98px;
     width:0;
-    background:#63707e;
+    background: #ffffff;
     text-shadow:0px -1px 1px #363f49;
     color:#fff;
     font-size:18px;
@@ -289,6 +289,7 @@ body {
     text-indent:10px;
     overflow:hidden;
     line-height:38px;
+    color: #000;
     -webkit-box-shadow:-1px 0px 1px rgba(255,255,255,0.4), 1px 1px 2px rgba(0,0,0,0.2) inset;
     -moz-box-shadow:-1px 0px 1px rgba(255,255,255,0.4), 1px 1px 2px rgba(0,0,0,0.2) inset;
     box-shadow:-1px 0px 1px rgba(255,255,255,0.4), 1px 1px 2px rgba(0,0,0,0.2) inset;
