--- a/leaderboard.css
+++ b/leaderboard.css
@@ -69,7 +69,7 @@ h2 {
 }
 #table .data-table tr.user {
     color: #FFF;
-    background: linear-gradient(#353535,#757575,#e0e0e0);
+    background: linear-gradient(#757575,#757575,#757575);
 }
 #table .data-table tr {
     -webkit-transition: background 0.3s, box-shadow 0.3s;
