--- a/leaderboard.css
+++ b/leaderboard.css
@@ -59,7 +59,7 @@ h2 {
     text-shadow: 0 0 1px rgba(0,0,0,0.1);
     font-size: 1.5em;
     color: #FFF;
-    background: linear-gradient(#757575,#757575,#757575);
+    background: #757575;
 }
 #table .data-table td {
     color: #f7f7f7;
@@ -69,7 +69,7 @@ h2 {
 }
 #table .data-table tr.user {
     color: #FFF;
-    background: linear-gradient(#353535,#757575,#e0e0e0);
+    background: #757575;
 }
 #table .data-table tr {
     -webkit-transition: background 0.3s, box-shadow 0.3s;
