--- a/leaderboard.css
+++ b/leaderboard.css
@@ -43,7 +43,7 @@ h2 {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     color: #FFF;
-    background: linear-gradient(#353535,#757575,#e0e0e0);
+    background: #757575;
 }
 #table .data-table th, #table .data-table td {
     box-shadow: inset 0 -1px rgba(0,0,0,0.25), 
